--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -43,7 +43,7 @@ mybatis:
   type-aliases-package: com.hd.pojo # 所有Entity别名类所在包
   mapper-locations: classpath:mybatis/mapper/**/*.xml # mapper映射文件
 spring:
- profiles: dev
+ profiles: prod
  application:
   name:microservice-product-config-location
  datasource:
