--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -30,7 +30,7 @@ eureka:
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
       #defaultZone: http://localhost:6001/eureka
-      defaultZone: http://eureka6001.com:6001/eureka,http://eureka6002.com:6002/eureka
+      defaultZone: http://eureka6001.com:6001/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port} # 指定实例ID,就不会显示主机名了
     preferIpAddress: true  #访问路径可以显示IP地址
@@ -64,7 +64,7 @@ eureka:
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
       #defaultZone: http://localhost:6001/eureka
-      defaultZone: http://eureka6001.com:6001/eureka,http://eureka6002.com:6002/eureka
+      defaultZone: http://eureka6001.com:6001/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port} # 指定实例ID,就不会显示主机名了
     preferIpAddress: true  #访问路径可以显示IP地址
